<resources>
    <string name="app_name">Apps Square Task</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="explore">Explore</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don’t have an account yet? <font color="#277EFF"><u>Sign Up</u></font></string>
    <string name="privacy_policy">By signing up, you agree to the <font color="#277EFF"><u>Terms of SService and Privacy Policy</u></font></string>
    <string name="sign_up">sign up</string>
    <string name="licurious_vaction">Licurious Vaction</string>
    <string name="plan_your">Plan your</string>
    <string name="reviews">reviews</string>
    <string name="popular_cities">Popular Cities</string>
</resources>